package entity

import (
	"encoding/json"

	"gorm.io/gorm"
)

type AuditLog struct {
	Id              uint64                 `gorm:"column:id;primaryKey;autoIncrement" mapstructure:"Id"`
	UserId          uint64                 `gorm:"column:user_id" mapstructure:"UserId"`
	Action          string                 `gorm:"column:action" mapstructure:"Action"`
	Feature         string                 `gorm:"column:feature"`
	Description     string                 `gorm:"column:description"`
	Before          map[string]interface{} `gorm:"-:all"`
	After           map[string]interface{} `gorm:"-:all"`
	Relation        map[string]interface{} `gorm:"-:all"`
	BeforeRaw       []byte                 `gorm:"column:before;type:jsonb"`
	AfterRaw        []byte                 `gorm:"column:after;type:jsonb"`
	RelationRaw     []byte                 `gorm:"column:relation;type:jsonb"`
	IpAddress       string                 `gorm:"column:ip_address"`
	UserAgent       string                 `gorm:"column:user_agent"`
	User            User                   `gorm:"foreignKey:UserId;references:Id"`
	SimpleAuditable SimpleAuditable        `gorm:"embedded"`
}

func (auditLogEntity *AuditLog) AfterFind(gormTransaction *gorm.DB) (err error) {
	if len(auditLogEntity.BeforeRaw) > 0 {
		err = json.Unmarshal(auditLogEntity.BeforeRaw, &auditLogEntity.Before)
	}
	if len(auditLogEntity.AfterRaw) > 0 {
		err = json.Unmarshal(auditLogEntity.AfterRaw, &auditLogEntity.After)
	}
	if len(auditLogEntity.RelationRaw) > 0 {
		err = json.Unmarshal(auditLogEntity.RelationRaw, &auditLogEntity.Relation)
	}
	return
}
func (auditLogEntity *AuditLog) BeforeSave(gormTransaction *gorm.DB) (err error) {
	if auditLogEntity.Before != nil && len(auditLogEntity.Before) > 0 {
		auditLogEntity.BeforeRaw, err = json.Marshal(auditLogEntity.Before)
	}
	if auditLogEntity.After != nil && len(auditLogEntity.After) > 0 {
		auditLogEntity.AfterRaw, err = json.Marshal(auditLogEntity.After)
	}
	if auditLogEntity.Relation != nil && len(auditLogEntity.Relation) > 0 {
		auditLogEntity.RelationRaw, err = json.Marshal(auditLogEntity.Relation)
	}
	return nil
}

func (auditLogEntity AuditLog) GetSimpleAuditable() *SimpleAuditable {
	return &auditLogEntity.SimpleAuditable

}
